design err, to fix, split CI into 3 VMs #92